SECURITY FIX: Remove hardcoded credentials and sensitive data
- Remove hardcoded Supabase URLs, API keys, and tokens from source code
- Update client.ts to use environment variables
- Update Edge Function to require environment variables
- Update execute_sql.cjs to use environment variables
- Remove sensitive files from Git tracking (.trae/mcp.json, execute_sql files, .env files)
- Update .gitignore to prevent future commits of sensitive data
- Add proper error handling for missing environment variables

This fixes GitHub security alerts for exposed secrets.

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,21 @@ dist-ssr
 .env.production
 .env.backup
 
+# Sensitive configuration files
+.trae/
+execute_sql.cjs
+*.key
+*.pem
+*.p12
+*.pfx
+
+# Database credentials
+postgresql://
+
+# API keys and tokens
+**/config/secrets.*
+**/config/keys.*
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
